Fixed FFmpeg Effect Emitter Export Generation.